--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     const userInput = document.getElementById("userInput");
     const chatBox = document.getElementById("chatBox");
 
-    const WEBHOOK_URL = "https://n8n-smkn1.kartin.my.id/webhook-test/chatbot"; 
+    const WEBHOOK_URL = "https://localhost:5678/webhook-test/chatbot"; 
     // Ganti URL di atas dengan URL webhook milikmu
 
     function addMessage(text, sender) {
@@ -189,3 +189,4 @@
   </script>
 </body>
 </html>
+
